Kubernetes/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-postgres
  template:
    metadata:
      labels:
        app: my-postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres
          ports:
            - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: my-postgres-service
spec:
  selector:
    app: my-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
