Kubernetes/flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask-container
          image: dheerajsreddy/flask-app2
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
spec:
  rules:
    - host: apparel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
          - path: /data_ingestion
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
          - path: /category
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
